Fixed spacing issues with responsive design.

--- a/css/style.css
+++ b/css/style.css
@@ -166,26 +166,31 @@ p{
 	padding-left: 5px;
 	padding-right: 5px;
 	background-color: #fcd58c;
-	margin-left: auto;
-	margin-right: auto;
+	margin-left: 20px;
+	margin-right: 20px;
 	width: auto;
 	box-shadow: 2px 5px 7px #6b0012;
 }
-@media screen and (max-width:415px) {
+@media screen and (max-width:768px) {
 .shoeContainer {
 	display: flex;
 	justify-content: space-around;
 	flex-direction: column;
 	padding: 5px 0;
+	gap: 15px;
 }
 
 }
 
-@media screen and (min-width:416px) {
+@media screen and (min-width:769px) {
 .shoeContainer {
 	display: flex;
 	justify-content: space-around;
 	flex-direction: row;
+	padding: 5px 0;
+	gap: 15px;
+	padding-left: 20px;
+	padding-right: 20px;
 }
 
 }
